Update project name
Changed Project Template name to Scenes of Anarchy

--- a/Source/GameApplication/ProjectTemplate_Android_vs2010.vcxproj
+++ b/Source/GameApplication/ProjectTemplate_Android_vs2010.vcxproj
@@ -18,7 +18,7 @@
     <ProjectGuid>{4910E2EB-2888-4829-9FE1-3E7B6FA0ED76}</ProjectGuid>
     <RootNamespace>
     </RootNamespace>
-    <ProjectName>ProjectTemplate</ProjectName>
+    <ProjectName>ScenesOfAnarchy</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Dev|hkAndroid'">
@@ -40,17 +40,17 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|hkAndroid'">
     <OutDir>..\..\Bin\android_arm_vs2010_anarchy\$(Configuration)\</OutDir>
     <IntDir>..\..\Obj\android_arm_vs2010_anarchy\$(Configuration)\ProjectTemplate\</IntDir>
-    <TargetName>ProjectTemplate</TargetName>
+    <TargetName>$(ProjectName)</TargetName>
     <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Dev|hkAndroid'">
-    <TargetName>ProjectTemplate</TargetName>
+    <TargetName>$(ProjectName)</TargetName>
     <OutDir>..\..\Bin\android_arm_vs2010_anarchy\$(Configuration)\</OutDir>
     <IntDir>..\..\Obj\android_arm_vs2010_anarchy\$(Configuration)\ProjectTemplate\</IntDir>
     <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|hkAndroid'">
-    <TargetName>ProjectTemplate</TargetName>
+    <TargetName>$(ProjectName)</TargetName>
     <OutDir>..\..\Bin\android_arm_vs2010_anarchy\$(Configuration)\</OutDir>
     <IntDir>..\..\Obj\android_arm_vs2010_anarchy\$(Configuration)\ProjectTemplate\</IntDir>
     <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
