--- a/Source/GameApplication/ProjectTemplateDX9_win32_vs2010.vcxproj
+++ b/Source/GameApplication/ProjectTemplateDX9_win32_vs2010.vcxproj
@@ -18,7 +18,7 @@
     <ProjectGuid>{57A549C5-5B49-47F4-8650-7F147D8B4C06}</ProjectGuid>
     <RootNamespace>ProjectTemplate100</RootNamespace>
     <Keyword>Win32Proj</Keyword>
-    <ProjectName>ProjectTemplate</ProjectName>
+    <ProjectName>ScenesOfAnarchy</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug DLL|Win32'" Label="Configuration">
@@ -47,9 +47,9 @@
   <PropertyGroup>
     <_ProjectFileVersion>10.0.30319.1</_ProjectFileVersion>
     <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug DLL|Win32'">..\..\Bin\win32_vs2010_anarchy\debug_dll\DX9\</OutDir>
-    <TargetName Condition="'$(Configuration)|$(Platform)'=='Debug DLL|Win32'">ProjectTemplate</TargetName>
+    <TargetName Condition="'$(Configuration)|$(Platform)'=='Debug DLL|Win32'">$(ProjectName)</TargetName>
     <OutDir Condition="'$(Configuration)|$(Platform)'=='Dev DLL|Win32'">..\..\Bin\win32_vs2010_anarchy\dev_dll\DX9\</OutDir>
-    <TargetName Condition="'$(Configuration)|$(Platform)'=='Dev DLL|Win32'">ProjectTemplate</TargetName>
+    <TargetName Condition="'$(Configuration)|$(Platform)'=='Dev DLL|Win32'">$(ProjectName)</TargetName>
     <OutDir Condition="'$(Configuration)|$(Platform)'=='Release DLL|Win32'">..\..\Bin\win32_vs2010_anarchy\release_dll\DX9\</OutDir>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Release DLL|Win32'">ProjectTemplate</TargetName>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Debug DLL|Win32'">..\..\Obj\win32_vs2010_anarchy\debug_dll\DX9\ProjectTemplate\</IntDir>
@@ -68,7 +68,7 @@
       <AdditionalIncludeDirectories>"$(VISION_SDK)\shared\include\vBase";"$(VISION_SDK)\shared\include\Engine";"$(VISION_SDK)\shared\include\PluginManager";"$(VISION_SDK)\shared\include";"$(DXSDK_DIR)\include";"$(VISION_SDK)\ThirdParty";;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Link>
-      <OutputFile>$(OutDir)ProjectTemplate.exe</OutputFile>
+      <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
       <SubSystem>Windows</SubSystem>
       <TargetMachine>MachineX86</TargetMachine>
       <AdditionalOptions> %(AdditionalOptions)</AdditionalOptions>
@@ -92,7 +92,7 @@
       <AdditionalIncludeDirectories>"$(VISION_SDK)\shared\include\vBase";"$(VISION_SDK)\shared\include\Engine";"$(VISION_SDK)\shared\include\PluginManager";"$(VISION_SDK)\shared\include";"$(DXSDK_DIR)\include";"$(VISION_SDK)\ThirdParty";;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Link>
-      <OutputFile>$(OutDir)ProjectTemplate.exe</OutputFile>
+      <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
       <SubSystem>Windows</SubSystem>
       <TargetMachine>MachineX86</TargetMachine>
       <AdditionalOptions> %(AdditionalOptions)</AdditionalOptions>
