The code is there and it compiles but breaks when you try to add any entity for reasons unknown.
The static addSphere, addBlock, and addRagdoll methods were changed to non-static to work with the new stack (necessitating other edits).

As a test I changed the control for addSphere to instead removeLast, as I didn't want to try to add to the UI.

The new classes as EntityStack and StackNode.  They have yet to be properly unit tested, but they are relatively simple.

--- a/Source/GameApplication/ProjectTemplateDX9_win32_vs2010.vcxproj
+++ b/Source/GameApplication/ProjectTemplateDX9_win32_vs2010.vcxproj
@@ -59,7 +59,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug DLL|Win32'">
     <ClCompile>
       <AdditionalOptions>/MP  %(AdditionalOptions)</AdditionalOptions>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>Create</PrecompiledHeader>
       <PrecompiledHeaderFile>GameApplicationPCH.h</PrecompiledHeaderFile>
       <PrecompiledHeaderOutputFile>$(IntDir)GameApplicationPCH.pch</PrecompiledHeaderOutputFile>
     </ClCompile>
@@ -139,12 +139,22 @@
     <ClCompile Include="GravityRoomController.cpp" />
     <ClCompile Include="IController.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="EntityStack.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug DLL|Win32'">GameApplicationPCH.h</PrecompiledHeaderFile>
+      <PrecompiledHeaderOutputFile Condition="'$(Configuration)|$(Platform)'=='Debug DLL|Win32'">$(IntDir)GameApplicationPCH.pch</PrecompiledHeaderOutputFile>
+    </ClCompile>
+    <ClCompile Include="StackNode.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Constants.h" />
     <ClInclude Include="GameApplicationPCH.h" />
     <ClInclude Include="GravityRoomController.h" />
     <ClInclude Include="IController.h" />
+    <ClInclude Include="EntityStack.h" />
+    <ClInclude Include="StackNode.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
