--- a/Source/GameApplication/ProjectTemplateDX9_win32_vs2010.vcxproj.filters
+++ b/Source/GameApplication/ProjectTemplateDX9_win32_vs2010.vcxproj.filters
@@ -5,11 +5,18 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="IController.cpp" />
     <ClCompile Include="GravityRoomController.cpp" />
+    <ClCompile Include="StackNode.cpp" />
+    <ClCompile Include="EntityStack.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameApplicationPCH.h" />
     <ClInclude Include="IController.h" />
     <ClInclude Include="GravityRoomController.h" />
     <ClInclude Include="Constants.h" />
+    <ClInclude Include="StackNode.h" />
+    <ClInclude Include="EntityStack.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
 </Project>
