Fixes Android Compile error
There was an error with missing methods when building android. It has
been fixed.

--- a/Source/GameApplication/ProjectTemplate_Android_vs2010.vcxproj
+++ b/Source/GameApplication/ProjectTemplate_Android_vs2010.vcxproj
@@ -122,16 +122,20 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="$(NDKROOT)\sources\android\native_app_glue\android_native_app_glue.c" />
+    <ClCompile Include="EntityStack.cpp" />
     <ClCompile Include="GameApplicationPCH.cpp" />
     <ClCompile Include="GravityRoomController.cpp" />
     <ClCompile Include="IController.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="StackNode.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Constants.h" />
+    <ClInclude Include="EntityStack.h" />
     <ClInclude Include="GameApplicationPCH.h" />
     <ClInclude Include="GravityRoomController.h" />
     <ClInclude Include="IController.h" />
+    <ClInclude Include="StackNode.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
